--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "cine-api",
+  "name": "iplacex-cine-api-rene_rivas",
   "version": "1.0.0",
-  "description": "API REST para administración de películas favoritas de trabajadores y colaboradores en Iplacex",
+  "description": "API REST Express para administración de películas favoritas de empleados de IPLACEX",
   "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-  "dev": "nodemon server.js"
-    },
-  "author": "Iplacex - Tu_Nombre_Apellido",
+    "dev": "nodemon server.js"
+  },
+  "author": "Iplacex - Rene Rivas",
   "license": "Apache-2.0",
   "dependencies": {
     "cors": "^2.8.5",
